--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "mongodb": "3.7",
-    "mongoose": "^7.2.1"
+    "mongoose": "^7.2.1",
+    "pusher": "^5.1.3"
   }
 }
